compiler/tests-spec/testData/diagnostics/linked/expressions/when-expression/p-6/pos/6.1.fir.kt
// SKIP_TXT


// TESTCASE NUMBER: 1
fun case_1(value_1: Int): String {
    while (true) {
        when (value_1) {
            break -> return ""
        }
    }

    return ""
}

// TESTCASE NUMBER: 2
fun case_2(value_1: Int): String {
    while (true) {
        when (value_1) {
            continue -> return ""
        }
    }

    return ""
}
